@@ -1,3 +1,9 @@
+2009-06-12  Andreas K. Foerster  <info@akfoerster.de>
+
+	* akfavatar.h, avatar.c (avt_import_image_stream)
+	(avt_show_image_stream, avt_load_audio_stream):
+	new functions
+
 2009-06-11  Andreas K. Foerster  <info@akfoerster.de>
 
 	* avatar-default.c: neutral avatar image
